@@ -17,8 +17,10 @@ siduxcc (0.11.3) UNRELEASED; urgency=low
   * cmake 11/?: hermes cmake files added
   * cmake 12/?: main.cpp problem solved
   * cmake 13/13: translation updated --> change to cmake done
+  * hermesExec problem solved
+  * all translations activated
 
- -- Fabian Wuertz <xadras@sidux.com>  Sat, 12 Jul 2008 21:57:17 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Sat, 12 Jul 2008 22:39:04 +0200
 
 siduxcc (0.11.2) unstable; urgency=low
 
